[metadata]
name = Laf
description = API Framework
long_description = file: README.md
license = Apache 2.0
version = 1.0.6
classifiers =
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: CPython


[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =lib/python
entry_points = file: entry_points.txt

[options.packages.find]
where = lib/python

###############################################################################
[easy_install]
allow_hosts =
